# voice-cloner

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  STREAMLIT_DEPLOYMENT.md  demo.py  docker-compose.yml  example_tts.py  example_vc.py  github_setup.py  launch.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  streamlit_app.py  test_imports.py  validate_deployment.py  verify_project.py
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: PROJECT_DOCUMENTATION.md
src/bhavesh_ai_voice_cloner/: __init__.py  tts.py  vc.py
src/bhavesh_ai_voice_cloner/models/: README.md  __init__.py
src/bhavesh_ai_voice_cloner/models/s3gen/matcha/: __init__.py
src/bhavesh_ai_voice_cloner/models/s3gen/utils/: __init__.py
src/bhavesh_ai_voice_cloner/models/t3/inference/: __init__.py
src/bhavesh_ai_voice_cloner/models/t3/modules/: __init__.py
