[project]
name = "bhavesh-ai-voice-cloner"
version = "1.0.0"
description = "Bhavesh AI Voice Cloner: Advanced Text-to-Speech and Voice Cloning System"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Bhavesh AI", email = "bhavesh.ai.contact@gmail.com"}
]
keywords = ["text-to-speech", "voice-cloning", "ai", "speech-synthesis", "tts"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26.0",
    "librosa==0.11.0",
    "s3tokenizer",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "transformers==4.46.3",
    "diffusers==0.29.0",
    "resemble-perth==1.0.1",
    "conformer==0.3.2",
    "safetensors==0.5.3",
    "streamlit>=1.28.0",
    "streamlit-option-menu>=0.3.6",
    "plotly>=5.15.0",
    "pandas>=2.0.0",
    "Pillow>=10.0.0",
    "scipy>=1.11.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/bhavesh-ai/voice-cloner"
Repository = "https://github.com/bhavesh-ai/voice-cloner"
Documentation = "https://github.com/bhavesh-ai/voice-cloner/wiki"
"Bug Tracker" = "https://github.com/bhavesh-ai/voice-cloner/issues"
"Streamlit App" = "https://bhavesh-ai-voice-cloner.streamlit.app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
